--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.0.1"
 authors = ["vedang"]
 edition = "2021"
 license-file = "LICENSE"
+description = "Vedang's Math Library"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
