--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 license-file = "LICENSE"
 description = "Vedang's Math Library"
 readme = "README.md"
+repository = "https://github.com/VLambda/vml.git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
