--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "vml"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["vedang"]
 edition = "2021"
 license-file = "LICENSE"
 description = "Vedang's Math Library"
-readme = "README.md"
+readme = "CratesREADME.md"
 repository = "https://github.com/VLambda/vml.git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
