--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "A Rust Math Library"
 readme = "CratesREADME.md"
 repository = "https://github.com/VLambda/ferrate.git"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+
+[dev-dependencies]
+assert_approx_eq = "1.1.0"
